# chatglm.cpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  api_Dockerfile  chatglm.cpp  chatglm.h  chatglm_pybind.cpp  chatglm_test.cpp  cli_chat.py  convert.py  main.cpp  pyproject.toml  setup.py  test_chatglm_cpp.py  test_convert.py  web_demo.py
.github/workflows/: cmake.yml  docker-publish.yml  python windows.yml  python-package.yml  python-publish.yml  python_compile_wheel.yml  wheels.yml
chatglm_cpp/: _C.pyi  __init__.py  convert.py  langchain_api.py  openai_api.py
docs/: README.md  chatglm.yml
examples/: api_demo.py  chatglm3_demo.py  cli_chat.py  cli_demo.py  langchain_client.py  langchain_openai_client.py  openai_client.py  web_demo.py
examples/system/: code_interpreter.txt  default.txt  function_call.txt
tests/: perf.sh  perplexity.cpp  ppl.sh  test_chatglm_cpp.py  test_convert.py
tests/data/: baichuan13b_model.data  baichuan7b_model.data  glm2_block.data  glm3_model.data  glm3_ptuning_v2_model.data  glm4_model.data  glm_block.data  glm_model.data  glm_ptuning_v2_model.data  internlm_model.data  layer_norm.data  linear.data  rms_norm.data
